Feat: implement Pokémon selection, play interface and theme toggle logic

--- a/virtual_pokemon_pet/index.html
+++ b/virtual_pokemon_pet/index.html
@@ -7,7 +7,12 @@
     <title>Virtual Pokemon Pet</title>
   </head>
   <body>
-    <section class="container"></section>
+    <header>
+      <button class="theme_mode js_theme_mode">Dark Mode</button>
+    </header>
+    <section class="pokemon_container js_pokemon_container"></section>
+
+    <section class="play_interface js_play_interface"></section>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
